Add world bindmount

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,4 +14,5 @@ services:
       - "2457:2457/udp"
     volumes:
       - "./server_files/:/root/server_files"
+      - "./worlds:/root/.config/unity3d/IronGate/Valheim/worlds/"
     restart: unless-stopped
