--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,16 @@ version: "3"
 
 services:
   valheim_box64:
-    image: ghcr.io/gornius/valheim_box64:240201
+    image: ghcr.io/gornius/valheim_box64:240303
     environment:
       - VALHEIM_SERVER_NAME=${SERVER_NAME:-GorniusValheimBox64}
       - VALHEIM_WORLD_NAME=${WORLD_NAME:-Box64World}
       - VALHEIM_PASSWORD=${PASSWORD:-box64pass}
       - VALHEIM_ISPUBLIC=${ISPUBLIC:-0}
-      - VALHEIM_PORT=${PORT:-2456}
     ports:
       - 2456:2456/udp
       - 2457:2457/udp
-      - 2458:2458/udp
+      - 2458:2458/tcp
     volumes:
       - "./server_files/:/root/server_files"
       - "./server_data/:/root/.config/unity3d/IronGate/Valheim/"
