--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   valheim_box64:
-    image: ghcr.io/gornius/valheim_box64:240303
+    image: ghcr.io/gornius/valheim_box64:latest
     environment:
       - VALHEIM_SERVER_NAME=${SERVER_NAME:-GorniusValheimBox64}
       - VALHEIM_WORLD_NAME=${WORLD_NAME:-Box64World}
